--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -10,7 +10,7 @@ html, body {
 }
 
 main {
-    padding: $LAYOUT_PADDING;
+    padding: 0 $LAYOUT_PADDING;
     width: 100%;
     max-width: $LAYOUT_MAX_WIDTH;
     margin: 0 auto;
