Removed the unnecessary <main> element.

--- a/app/styles/_sec-about.scss
+++ b/app/styles/_sec-about.scss
@@ -2,7 +2,7 @@ section#about {
 
     $gridPadding: $LAYOUT_PADDING * 2;
 
-    overflow: hidden; // to clear floats
+    @include standard-centered-section();
 
     @include viewports(above stacked) {
 
