Added the style files for the rest of the sections.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,4 +24,7 @@ $LAYOUT_PADDING: 20px;
 @import "header";
 @import "sec-home";
 @import "sec-about";
+@import "sec-services";
+@import "sec-technology";
+@import "sec-contact";
 @import "footer";
