Added fontawesome, and some silly default icons.

--- a/app/styles/_sec-about.scss
+++ b/app/styles/_sec-about.scss
@@ -6,6 +6,7 @@ section#about {
 
     @include viewports(above stacked) {
 
+        // Implement the grid layout:
         section {
             width: (100% / 3);
             float: left;
