--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,8 +1,12 @@
 header {
-    background: #F2F2F2;
-    //border-bottom: 8px solid black;
+    background: whitesmoke; //#F2F2F2;
     overflow: visible; // in case the logo wants out of the header
     z-index: 1;
+
+    .minified-header & {
+        background: #f5f3f3;
+        @extend %shadow;
+    }
 
     @include viewports(above stacked) { // set up a static header
         position: fixed;
@@ -12,6 +16,7 @@ header {
     }
 
     nav {
+        background: whitesmoke; //#F2F2F2;
         width: 100%;
         max-width: $LAYOUT_MAX_WIDTH;
         margin: 0 auto;
@@ -23,6 +28,15 @@ header {
             text-decoration: none;
             text-align: center;
             color: #555;
+            font-size: 18px;
+
+            &:last-child {
+                padding-right: 20px; // TODO
+            }
+
+            .minified-header & {
+                padding-top: 20px;
+            }
 
             &:hover {
                 color: #777;
@@ -34,11 +48,18 @@ header {
 
             &:first-child { // i.e. the logo
                 color: transparent;
-                height: 100px;
+                height: 120px;
+                padding: 0;
+                margin: 0;
                 background-image: image-url('aikumo-logo.png');
                 background-size: auto 120px;
                 background-repeat: no-repeat;
                 background-position: center;
+
+                .minified-header & {
+                    height: 50px;
+                    background-size: auto 50px;
+                }
 
                 @include viewports(above stacked) {
                     position: absolute;
@@ -46,6 +67,13 @@ header {
                     top: 30px;
                     width: 260px;
                     height: 120px;
+
+                    .minified-header & {
+                        height: 50px;
+                        background-size: auto 50px;
+                        left: -55px; // TODO
+                        top: 10px;
+                    }
                 }
             }
         }
