--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -17,3 +17,39 @@ a {
 ul {
     list-style: none;
 }
+
+h3,
+h2 {
+    margin-bottom: 25px;
+    font-weight: 100;
+    line-height: 0.9em;
+}
+
+%shadow {
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12);
+}
+
+%shadow-large {
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.16);
+}
+
+%shadow-mega {
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.19);
+}
+
+.intro-area {
+    overflow: hidden;
+    padding: 40px 0 70px 0;
+
+    .intro {
+        padding-top: 15px;
+        width: 50%;
+        float: left;
+    }
+
+    h2 {
+        width: 50%;
+        float: left;
+        margin: 0;
+    }
+}
