--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -14,11 +14,12 @@ body > * {
 }
 
 .section {
-    height: 120vh;
-    padding-top: 15%;
+    min-height: 120vh;
+    padding-top: 7%;
+    padding-bottom: 6%;
 
     h2 {
-        font-size: 5vw;
-        font-weight: 100;
+        font-size: 6vw;
+        //font-weight: 100;
     }
 }
