--- a/app/styles/_sec-about.scss
+++ b/app/styles/_sec-about.scss
@@ -7,20 +7,55 @@ section#about {
     @include viewports(above stacked) {
 
         // Implement the grid layout:
-        section {
-            width: (100% / 3);
-            float: left;
+        .about-sections {
+            section {
+                width: (100% / 3);
+                float: left;
 
-            &:nth-child(3) { // first box
-                padding-right: ($gridPadding * 2) / 3;
+                &:nth-child(1) { // first box
+                    padding-right: ($gridPadding * 2) / 3;
+                }
+                &:nth-child(2) { // second box
+                    padding-left: ($gridPadding * 1) / 3;
+                    padding-right: ($gridPadding * 1) / 3;
+                }
+                &:nth-child(3) { // third box
+                    padding-left: ($gridPadding * 2) / 3;
+                }
             }
-            &:nth-child(4) { // second box
-                padding-left: ($gridPadding * 1) / 3;
-                padding-right: ($gridPadding * 1) / 3;
-            }
-            &:nth-child(5) { // third box
-                padding-left: ($gridPadding * 2) / 3;
-            }
+        }
+    }
+
+    .about-sections section {
+        &:nth-child(1) i { background: $logoBlue; }
+        &:nth-child(2) i { background: #F01B64; }
+        &:nth-child(3) i { background: #08A93B; }
+    }
+
+    i {
+        font-size: 180px;
+        text-align: center;
+        width: 100%;
+        padding: 20px 0;
+        color: white;
+        @extend %shadow;
+    }
+
+    h3 {
+        font-size: 36px;
+        margin-bottom: 10px;
+    }
+
+    p {
+        margin: 10px 0;
+    }
+
+    ol {
+        padding-left: 20px;
+        margin-top: 10px;
+
+        li {
+            padding-bottom: 20px;
         }
     }
 }
