--- a/app/styles/_sec-home.scss
+++ b/app/styles/_sec-home.scss
@@ -1,6 +1,6 @@
 section#home {
 
-    background: #F2F2F2;
+    background: whitesmoke;
     padding: 100px 0; // so there's some spacing in "stacked" layout, too
     position: relative;
 
@@ -10,13 +10,23 @@ section#home {
         margin: 0 auto;
     }
 
+    .bottom-half {
+        background: #222;
+        overflow: hidden;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding: 20px 80px 60px 80px;
+    }
+
     @include viewports(above stacked) {
         height: 500px; // for browsers that don't understand "vh" units
         height: 100vh;
 
         h1 {
             margin-top: 200px; // for browsers that don't understand "vh" units
-            margin-top: 12vh;
+            margin-top: 15vh;
             margin-bottom: 0;
             font-size: 20vw;
             line-height: 18vw;
@@ -27,7 +37,7 @@ section#home {
 
         p {
             color: #369AB3;
-            font-size: 5vw;
+            font-size: 6vw;
             margin-top: 4vh;
             margin-bottom: 16vh;
             font-weight: 100;
@@ -37,10 +47,14 @@ section#home {
             text-align: center;
             font-size: 2vw;
             text-transform: uppercase;
-            color: #666;
+            color: #ccc;
 
             &:visited {
-                color: #666;
+                color: #ccc;
+            }
+
+            &:hover {
+                color: #999;
             }
         }
     }
