--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -24,7 +24,7 @@ header {
 
         a {
             display: block;
-            padding: 63px $LAYOUT_PADDING 20px $LAYOUT_PADDING;
+            padding: 63px 20px 20px 20px;
             text-decoration: none;
             text-align: center;
             color: #555;
