--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -1,7 +1,7 @@
 body {
     font-family: 'Lato', sans-serif;
     font-size: 1em;
-    line-height: 1.7em;
+    line-height: 1.6em;
     color: #444;
     font-weight: 300;
 }
@@ -42,7 +42,9 @@ h2 {
     padding: 40px 0 70px 0;
 
     .intro {
-        padding-top: 15px;
+        font-size: 18px;
+        line-height: 29px;
+        padding-top: 20px;
         width: 50%;
         float: left;
     }
