--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -1,6 +1,9 @@
 footer {
-    background: #323232;
+    background-image: url(../images/map-image.png);
+    background-color: darken($logoBlue, 15%);
     color: white;
     padding: 20px;
     text-align: center;
+    height: 700px;
+    width: 100%;
 }
