--- a/app/styles/_sec-contact.scss
+++ b/app/styles/_sec-contact.scss
@@ -1,5 +1,29 @@
 section#contact {
+    background: whitesmoke;
 
     @include standard-centered-section();
 
+
+    ul li {
+        float: left;
+        width: 25%;
+        height: 200px;
+        margin-top: 100px;
+
+        $dimension: 110px;
+        .frame {
+            background-image: url('../images/kari.jpg');
+            background-repeat: no-repeat;
+            background-position: center center;
+            width: $dimension;
+            height: $dimension;
+            border-radius: $dimension;
+            border: 10px solid white;
+        }
+
+        h3 {
+            font-size: 25px;
+            margin-bottom: 0;
+        }
+    }
 }
