--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,15 +9,24 @@ $VIEWPORTS_CONFIG:
 // endbower
 
 $LAYOUT_MAX_WIDTH: 1300px;
-$LAYOUT_PADDING: 20px;
+$LAYOUT_PADDING: 100px;
 
+
+// TODO: Sorry!
 @mixin standard-centered-section {
+    //padding-left: $LAYOUT_PADDING;
+    //padding-right: $LAYOUT_PADDING;
+    width: 100%;
+    //max-width: $LAYOUT_MAX_WIDTH;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section {
     padding-left: $LAYOUT_PADDING;
     padding-right: $LAYOUT_PADDING;
     width: 100%;
-    max-width: $LAYOUT_MAX_WIDTH;
-    margin-left: auto;
-    margin-right: auto;
+    //max-width: $LAYOUT_MAX_WIDTH;
 }
 
 // Colors
