--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -1,7 +1,7 @@
 body {
     font-family: 'Lato', sans-serif;
-    font-size: 1em;
-    line-height: 1.6em;
+    font-size: 1.1em;
+    line-height: 1.7em;
     color: #444;
     font-weight: 300;
 }
@@ -39,18 +39,19 @@ h2 {
 
 .intro-area {
     overflow: hidden;
-    padding: 40px 0 70px 0;
+    padding: 40px 0 150px 0;
 
     .intro {
-        font-size: 18px;
-        line-height: 29px;
-        padding-top: 20px;
-        width: 50%;
+        font-size: 19px;
+        line-height: 35px;
+        padding-top: 15px;
+        width: 58%;
+        margin-left: 4%;
         float: left;
     }
 
     h2 {
-        width: 50%;
+        width: 38%;
         float: left;
         margin: 0;
     }
