--- a/app/styles/_sec-about.scss
+++ b/app/styles/_sec-about.scss
@@ -1,7 +1,7 @@
 section#about {
 
     // TODO: SORRY!
-    $gridPadding: 40px;
+    $gridPadding: 80px;
 
     @include standard-centered-section();
 
@@ -34,7 +34,8 @@ section#about {
     }
 
     i {
-        font-size: 180px;
+        @extend %shadow;
+        font-size: 150px;
         text-align: center;
         width: 100%;
         padding: 20px 0;
@@ -43,8 +44,10 @@ section#about {
     }
 
     h3 {
-        font-size: 36px;
-        margin-bottom: 10px;
+        font-size: 26px;
+        font-weight: normal;
+        margin-bottom: 15px;
+        margin-top: 55px;
     }
 
     p {
