--- a/app/styles/_sec-contact.scss
+++ b/app/styles/_sec-contact.scss
@@ -1,29 +1,44 @@
 section#contact {
-    background: whitesmoke;
+    background: rgb(239, 239, 237);
 
     @include standard-centered-section();
 
 
-    ul li {
-        float: left;
-        width: 25%;
-        height: 200px;
-        margin-top: 100px;
+    ul {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        margin-left: -60px; // For left and right side being aligned with heading
+        margin-right: -60px; // Sorry!
 
-        $dimension: 110px;
-        .frame {
-            background-image: url('../images/kari.jpg');
-            background-repeat: no-repeat;
-            background-position: center center;
-            width: $dimension;
-            height: $dimension;
-            border-radius: $dimension;
-            border: 10px solid white;
-        }
+         li {
+            text-align: center;
+            float: left;
+            width: 25%;
+            height: 200px;
+            margin-top: 130px;
 
-        h3 {
-            font-size: 25px;
-            margin-bottom: 0;
+            &:nth-child(1) .frame { background-image: url('../images/pasi.jpg') }
+            &:nth-child(2) .frame { background-image: url('../images/kari.jpg') }
+            &:nth-child(3) .frame { background-image: url('../images/okko.png') }
+            &:nth-child(4) .frame { background-image: url('../images/janne.jpg') }
+
+            $dimension: 110px;
+            .frame {
+                @extend %shadow;
+                background-repeat: no-repeat;
+                background-position: center center;
+                width: $dimension;
+                height: $dimension;
+                border-radius: $dimension;
+                border: 10px solid white;
+                margin: 0 auto;
+            }
+
+            h3 {
+                font-size: 25px;
+                margin-bottom: 0;
+            }
         }
     }
 }
