--- a/app/styles/_sec-services.scss
+++ b/app/styles/_sec-services.scss
@@ -5,28 +5,28 @@ section#services {
     @include standard-centered-section();
 
     .service-section {
-        @extend %shadow;
+        @extend %shadow-large;
         padding: 30px 70px;
         background: whitesmoke;
         color: #444;
         overflow: hidden;
-        margin-bottom: 50px;
+        margin-bottom: 70px;
         min-height: 400px;
 
-        //&.first { background: darken($logoBlue, 15%); }
-        //&.second { background: darken($logoBlue, 5%); }
-        //&.third { background: lighten($logoBlue, 14%); }
+        &.first h3 { color: $logoBlue; }
+        &.second h3 { color: #F01B64; }
+        &.third h3 { color: #08A93B; }
 
         h3 {
-            font-size: 40px;
+            font-size: 35px;
+            font-weight: normal;
         }
 
         p {
             display: block;
-            width: 50%;
+            width: 40%;
+            margin-right: 10%;
             float: left;
-            font-size: 20px;
-            line-height: 35px;
         }
 
         ul {
