--- a/app/styles/_sec-technology.scss
+++ b/app/styles/_sec-technology.scss
@@ -1,5 +1,13 @@
 section#technology {
+    background: rgb(47, 47, 45);
+    color: #d6d6d6;
 
     @include standard-centered-section();
+
+    img {
+        margin-top: 40px;
+        margin-bottom: 80px;
+        width: 100%;
+    }
 
 }
