--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,11 @@ $LAYOUT_PADDING: 100px;
     padding-right: $LAYOUT_PADDING;
     width: 100%;
     //max-width: $LAYOUT_MAX_WIDTH;
+
+    @include viewports(stacked) {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 }
 
 // Colors
