--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -41,18 +41,34 @@ h2 {
     overflow: hidden;
     padding: 40px 0 150px 0;
 
+    @include viewports(stacked fluid) {
+        padding-bottom: 70px;
+    }
+
     .intro {
         font-size: 19px;
         line-height: 35px;
-        padding-top: 15px;
+        padding-top: 10px;
         width: 58%;
         margin-left: 4%;
         float: left;
+
+        @include viewports(stacked fluid) {
+            float: none;
+            width: 100%;
+            margin: 30px 0 0 0;
+        }
     }
 
     h2 {
         width: 38%;
         float: left;
         margin: 0;
+
+        @include viewports(stacked fluid) {
+            float: none;
+            width: 100%;
+            font-size: 50px;
+        }
     }
 }
