--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -2,7 +2,7 @@ footer {
     background-image: url(../images/map-image.png);
     background-color: darken($logoBlue, 15%);
     color: white;
-    padding: 20px;
+    padding: 120px;
     text-align: center;
     min-height: 100vh;
     width: 100%;
@@ -11,29 +11,57 @@ footer {
     overflow: hidden;
     padding-bottom: 150px;
 
+    @include viewports(stacked) {
+        padding: 30px 30px 130px 30px;
+    }
+
     .contact-us {
         padding: 180px 0 0 0;
         color: white;
         font-size: 60px;
         font-weight: 100;
+        line-height: 65px;
+
+        @include viewports(fluid) {
+            font-size: 50px;
+            line-height: 55px;
+            padding-top: 60px;
+        }
+
+        @include viewports(stacked) {
+            font-size: 30px;
+            line-height: 35px;
+            padding-top: 50px;
+        }
     }
 
     .release {
         padding: 70px 0 130px 0;
         color: white;
         font-size: 30px;
+        line-height: 40px;
+
+        @include viewports(stacked fluid) {
+            padding: 40px 0 70px 0;
+        }
     }
 
     form {
         margin-bottom: 200px;
         overflow: hidden;
-        width: 70%;
+        width: 100%;
+        max-width: 800px;
         margin: 0 auto;
 
         > div {
             overflow: hidden;
             float: left;
             width: 65%;
+
+            @include viewports(stacked fluid) {
+                width: 100%;
+                float: none;
+            }
 
             input, textarea {
                 border-radius: 4px;
@@ -42,6 +70,12 @@ footer {
                 @extend %shadow-large;
                 padding: 30px;
                 font-size: 20px;
+                line-height: 25px;
+
+                @include viewports(stacked fluid) {
+                    font-size: 16px;
+                    line-height: 20px;
+                }
             }
 
             input {
@@ -70,6 +104,13 @@ footer {
             float: left;
             height: 100%;
             border-radius: 4px;
+
+            @include viewports(stacked fluid) {
+                width: 100%;
+                float: none;
+                font-size: 16px;
+                margin: 35px 0 0 0;
+            }
         }
     }
 
