--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -21,5 +21,9 @@ body > * {
     h2 {
         font-size: 6vw;
         //font-weight: 100;
+
+        @include viewports(stacked fluid) {
+            font-size: 40px;
+        }
     }
 }
