--- a/app/styles/_sec-about.scss
+++ b/app/styles/_sec-about.scss
@@ -23,6 +23,18 @@ section#about {
                 &:nth-child(3) { // third box
                     padding-left: ($gridPadding * 2) / 3;
                 }
+
+            }
+        }
+    }
+
+    .about-sections {
+
+        section {
+            @include viewports(stacked fluid) {
+                width: 100%;
+                float: none;
+                padding: 80px 0 0 0 !important;
             }
         }
     }
@@ -48,6 +60,12 @@ section#about {
         font-weight: normal;
         margin-bottom: 15px;
         margin-top: 55px;
+
+        @include viewports(stacked fluid) {
+            font-size: 35px;
+            margin-top: 45px;
+            margin-bottom: 25px;
+        }
     }
 
     p {
