--- a/app/styles/_sec-technology.scss
+++ b/app/styles/_sec-technology.scss
@@ -8,6 +8,16 @@ section#technology {
         margin-top: 40px;
         margin-bottom: 80px;
         width: 100%;
+
+        @include viewports(fluid) {
+            margin-top: 10px;
+            margin-bottom: 60px;
+        }
+
+        @include viewports(stacked) {
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
     }
 
 }
