--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,9 +1,12 @@
-$headerMinificationSpeed: 250ms;
+$headerAnimationSpeed: 250ms;
 
 header {
     background: whitesmoke; //#F2F2F2;
     overflow: visible; // in case the logo wants out of the header
     z-index: 1;
+    position: relative;
+    box-shadow: 0 0 0 transparent;
+    transition: box-shadow $headerAnimationSpeed ease-out;
 
     .minified-header & {
         background: #f5f3f3;
@@ -26,26 +29,38 @@ header {
 
         a {
             display: block;
-            padding: 63px 20px 20px 20px;
+            padding: 70px 20px 70px 20px;
             text-decoration: none;
             text-align: center;
             color: #555;
             font-size: 18px;
-            transition: padding-top $headerMinificationSpeed ease-out;
+            transition: padding-top $headerAnimationSpeed ease-out;
 
             &:last-child {
-                padding-right: 20px; // TODO
+                padding-right: 20px; // TODO: What about stacked..?
             }
 
-            .minified-header & {
+            .minified-header & { // collapse the navi item height when scrolled down
                 padding-top: 20px;
+                padding-bottom: 20px;
+            }
+            @include viewports(fluid) { // ...or when in fluid layout mode
+                padding-top: 20px;
+                padding-bottom: 20px;
             }
 
             &:hover {
                 color: #777;
             }
 
-            @include viewports(above stacked) {
+            @include viewports(fluid) {
+                display: inline-block; // switch to inline-block to pack links to the right
+                width: (100% - 25%) / 4; // leave ~25% space for the logo
+                text-align: left;
+                line-height: 22px;
+            }
+
+            @include viewports(static) {
                 display: inline-block; // switch to inline-block to pack links to the right
             }
 
@@ -55,26 +70,29 @@ header {
                 padding: 0;
                 margin: 0;
                 background-image: image-url('aikumo-logo.png');
-                background-size: auto 120px;
+                background-size: contain;
                 background-repeat: no-repeat;
-                background-position: left top;
-                // see http://pleeease.io/play/
-                -webkit-transform-origin: left top;
-                transform-origin: left top;
-                transition: -webkit-transform $headerMinificationSpeed ease-out;
-                transition: transform $headerMinificationSpeed ease-out;
+                background-position: center center;
 
-                .minified-header & {
-                    -webkit-transform: scale(0.4) translateY(-50px);
-                    transform: scale(0.4) translateY(-50px);
-                }
-
-                @include viewports(above stacked) {
+                @include viewports(above stacked) { // use an absolutely-positioned logo instead of the stacked one
+                    // see http://pleeease.io/play/
+                    -webkit-transform-origin: left center;
+                    transform-origin: left center;
+                    transition: -webkit-transform $headerAnimationSpeed ease-out;
+                    transition: transform $headerAnimationSpeed ease-out;
                     position: absolute;
+                    top: 50%;
                     left: 30px;
-                    top: 30px;
                     width: 260px;
                     height: 120px;
+                    transform: translateY(-50%);
+
+                    .minified-header & { // collapse the logo to its smaller size when scrolled down
+                        transform: translateY(-50%) scale(0.4);
+                    }
+                    @include viewports(fluid) { // ...or when in fluid layout mode
+                        transform: translateY(-50%) scale(0.4);
+                    }
                 }
             }
         }
