--- a/app/styles/_sec-about.scss
+++ b/app/styles/_sec-about.scss
@@ -31,7 +31,7 @@ section#about {
     .about-sections {
 
         section {
-            @include viewports(stacked fluid) {
+            @include viewports(up-to fluid) {
                 width: 100%;
                 float: none;
                 padding: 80px 0 0 0 !important;
@@ -61,7 +61,7 @@ section#about {
         margin-bottom: 15px;
         margin-top: 55px;
 
-        @include viewports(stacked fluid) {
+        @include viewports(up-to fluid) {
             font-size: 35px;
             margin-top: 45px;
             margin-bottom: 25px;
