--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -11,7 +11,7 @@ footer {
     overflow: hidden;
     padding-bottom: 150px;
 
-    @include viewports(stacked) {
+    @include viewports(up-to stacked) {
         padding: 30px 30px 130px 30px;
     }
 
@@ -22,13 +22,13 @@ footer {
         font-weight: 100;
         line-height: 65px;
 
-        @include viewports(fluid) {
+        @include viewports(up-to fluid) {
             font-size: 50px;
             line-height: 55px;
             padding-top: 60px;
         }
 
-        @include viewports(stacked) {
+        @include viewports(up-to stacked) {
             font-size: 30px;
             line-height: 35px;
             padding-top: 50px;
@@ -41,7 +41,7 @@ footer {
         font-size: 30px;
         line-height: 40px;
 
-        @include viewports(stacked fluid) {
+        @include viewports(up-to fluid) {
             padding: 40px 0 70px 0;
         }
     }
@@ -58,7 +58,7 @@ footer {
             float: left;
             width: 65%;
 
-            @include viewports(stacked fluid) {
+            @include viewports(up-to fluid) {
                 width: 100%;
                 float: none;
             }
@@ -72,7 +72,7 @@ footer {
                 font-size: 20px;
                 line-height: 25px;
 
-                @include viewports(stacked fluid) {
+                @include viewports(up-to fluid) {
                     font-size: 16px;
                     line-height: 20px;
                 }
@@ -105,7 +105,7 @@ footer {
             height: 100%;
             border-radius: 4px;
 
-            @include viewports(stacked fluid) {
+            @include viewports(up-to fluid) {
                 width: 100%;
                 float: none;
                 font-size: 16px;
