--- a/app/styles/_sec-contact.scss
+++ b/app/styles/_sec-contact.scss
@@ -19,12 +19,12 @@ section#contact {
             height: 200px;
             margin-top: 70px;
 
-             @include viewports(fluid) {
+             @include viewports(up-to fluid) {
                  width: 50%;
                  margin-top: 70px;
              }
 
-             @include viewports(stacked) {
+             @include viewports(up-to stacked) {
                  float: none;
                  width: 100%;
                  margin-top: 60px;
