first page to mobile

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,4 +1,4 @@
-$headerAnimationSpeed: 250ms;
+$headerAnimationSpeed: 150ms;
 
 header {
     background: whitesmoke; //#F2F2F2;
@@ -26,6 +26,7 @@ header {
         max-width: $LAYOUT_MAX_WIDTH;
         margin: 0 auto;
         text-align: right; // in "above stacked", the nav-items should pack to the right
+        overflow: hidden;
 
         a {
             display: block;
@@ -44,10 +45,6 @@ header {
                 padding-top: 20px;
                 padding-bottom: 20px;
             }
-            @include viewports(fluid) { // ...or when in fluid layout mode
-                padding-top: 20px;
-                padding-bottom: 20px;
-            }
 
             &:hover {
                 color: #777;
@@ -58,6 +55,28 @@ header {
                 width: (100% - 25%) / 4; // leave ~25% space for the logo
                 text-align: left;
                 line-height: 22px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
+
+            @include viewports(stacked) {
+                &:first-child {
+                    width: 50%;
+                    position: absolute;
+                    top: 18px;
+                    left: 10px;
+                    //margin-bottom: -2px !important;
+                }
+
+                &:not(:first-child) {
+                    text-align: right;
+                    padding: 2px 10px 0 10px;
+                    width:  50%;
+                    float: right;
+                    clear: both;
+                    font-size: 13px;
+                    display: block;
+                }
             }
 
             @include viewports(static) {
