--- a/app/styles/_sec-home.scss
+++ b/app/styles/_sec-home.scss
@@ -1,8 +1,12 @@
 section#home {
-
+    min-height: 80vh;
     background: whitesmoke;
     padding: 100px 0; // so there's some spacing in "stacked" layout, too
     position: relative;
+
+    @include viewports(stacked) {
+        padding: 0;
+    }
 
     > div {
         width: 87vw;
@@ -18,6 +22,10 @@ section#home {
         left: 0;
         right: 0;
         padding: 20px 80px 60px 80px;
+
+        @include viewports(stacked) {
+            padding: 30px 20px 80px 20px;
+        }
     }
 
     @include viewports(above stacked) {
@@ -34,6 +42,12 @@ section#home {
         font-weight: 100;
         text-transform: uppercase;
         letter-spacing: -2vw;
+
+        @include viewports(stacked) {
+            //display: none;
+            margin-top: 20vh;
+            font-size: 80px;
+        }
     }
 
     p {
@@ -42,6 +56,12 @@ section#home {
         margin-top: 4vh;
         margin-bottom: 16vh;
         font-weight: 100;
+
+        @include viewports(stacked) {
+            margin-top: 3vh;
+            font-size: 35px;
+            margin-bottom: 10vh;
+        }
     }
 
     a { // TODO: CENTER THIS
@@ -56,6 +76,10 @@ section#home {
 
         &:hover {
             color: #999;
+        }
+
+        @include viewports(stacked) {
+            font-size: 20px;
         }
     }
 }
