--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -59,7 +59,7 @@ header {
                 padding-bottom: 20px;
             }
 
-            @include viewports(stacked) {
+            @include viewports(up-to stacked) {
                 &:first-child {
                     width: 50%;
                     position: absolute;
