--- a/app/styles/_sec-home.scss
+++ b/app/styles/_sec-home.scss
@@ -4,7 +4,7 @@ section#home {
     padding: 100px 0; // so there's some spacing in "stacked" layout, too
     position: relative;
 
-    @include viewports(stacked) {
+    @include viewports(up-to stacked) {
         padding: 0;
     }
 
@@ -23,7 +23,7 @@ section#home {
         right: 0;
         padding: 20px 80px 60px 80px;
 
-        @include viewports(stacked) {
+        @include viewports(up-to stacked) {
             padding: 30px 20px 80px 20px;
         }
     }
@@ -43,7 +43,7 @@ section#home {
         text-transform: uppercase;
         letter-spacing: -2vw;
 
-        @include viewports(stacked) {
+        @include viewports(up-to stacked) {
             //display: none;
             margin-top: 20vh;
             font-size: 80px;
@@ -57,7 +57,7 @@ section#home {
         margin-bottom: 16vh;
         font-weight: 100;
 
-        @include viewports(stacked) {
+        @include viewports(up-to stacked) {
             margin-top: 3vh;
             font-size: 35px;
             margin-bottom: 10vh;
@@ -78,7 +78,7 @@ section#home {
             color: #999;
         }
 
-        @include viewports(stacked) {
+        @include viewports(up-to stacked) {
             font-size: 20px;
         }
     }
