Removed a bunch of unnecessary calls to standard-centered-section().

--- a/app/styles/_sec-about.scss
+++ b/app/styles/_sec-about.scss
@@ -1,9 +1,6 @@
 section#about {
-
-    // TODO: SORRY!
     $gridPadding: 80px;
-
-    @include standard-centered-section();
+    width: 100%;
 
     @include viewports(above stacked) {
 
