--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -18,6 +18,10 @@ footer {
         padding: 30px 30px 130px 30px;
     }
 
+    > * {
+       @include standard-centered-section();
+    }
+
     .contact-us {
         padding: 180px 0 0 0;
         color: white;
