--- a/app/styles/_sec-services.scss
+++ b/app/styles/_sec-services.scss
@@ -3,8 +3,13 @@ section#services {
     color: whitesmoke;
     width: 100%;
 
+    .intro-area {
+        @include standard-centered-section();
+    }
+
     .service-section {
         @extend %shadow-large;
+        @include standard-centered-section();
         padding: 30px 70px;
         background: whitesmoke;
         color: #444;
