--- a/app/styles/_sec-technology.scss
+++ b/app/styles/_sec-technology.scss
@@ -3,7 +3,13 @@ section#technology {
     color: #d6d6d6;
     width: 100%;
 
+    .intro-area {
+        @include standard-centered-section();
+    }
+
     img {
+        @include standard-centered-section();
+        display: block;
         margin-top: 40px;
         margin-bottom: 80px;
         width: 100%;
