Removed unnecessary absolute positioning from the footer.

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -122,10 +122,7 @@ footer {
     }
 
     .copyright {
-        position: absolute;
-        width: 100%;
-        bottom: 40px;
-        left: 0;
+        padding-top: 50px;
         font-size: 16px;
         color: #98c6d6;
     }
