--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -58,6 +58,11 @@ h2 {
             width: 100%;
             margin: 30px 0 0 0;
         }
+
+        @include viewports(stacked) {
+            font-size: 16px;
+            line-height: 30px;
+        }
     }
 
     h2 {
