--- a/app/styles/_sec-services.scss
+++ b/app/styles/_sec-services.scss
@@ -13,38 +13,33 @@ section#services {
         margin-bottom: 70px;
         min-height: 400px;
 
-        @include viewports(stacked fluid) {
+        @include viewports(stacked) {
             padding: 0px 25px;
             margin: 30px -20px;
         }
 
-        &.first h3 { color: $logoBlue; }
-        &.second h3 { color: #F01B64; }
-        &.third h3 { color: #08A93B; }
+        @include viewports(fluid) {
+            padding: 40px 80px;
+            margin: 30px -20px;
+        }
+
+        &.first h3 { color: #F01B64; }
+        &.second h3 { color: #08A93B; }
+        &.third h3 { color: $logoBlue; }
 
         h3 {
             font-size: 35px;
+            line-height: 40px;
             font-weight: normal;
 
             @include viewports(stacked fluid) {
                 font-size: 25px;
+                line-height: 30px;
             }
         }
 
-        p {
-            display: block;
-            width: 40%;
-            margin-right: 10%;
-            float: left;
-
-            @include viewports(stacked fluid) {
-                float: none;
-                width: 100%;
-            }
-        }
-
-        ul {
-            width: 50%;
+        > div {
+            width: 45%;
             float: left;
 
             @include viewports(stacked fluid) {
@@ -52,21 +47,44 @@ section#services {
                 width: 100%;
             }
 
-            li {
-                padding-bottom: 15px;
-                position: relative;
+            p {
+                display: block;
+            }
 
-                &::before {
-                    content: "";
-                    background: #444;
-                    position: absolute;
-                    top: 9px;
-                    left: -22px;
-                    width: 12px;
-                    height: 12px;
-                    border-radius: 12px;
-                    display: block;
+            ul {
+                padding-left: 25px;
+
+                li {
+                    padding-bottom: 15px;
+                    position: relative;
+
+                    &::before {
+                        content: "";
+                        background: #444;
+                        position: absolute;
+                        top: 9px;
+                        left: -22px;
+                        width: 12px;
+                        height: 12px;
+                        border-radius: 12px;
+                        display: block;
+                    }
                 }
+            }
+        }
+
+        img {
+            width: 50%;
+            margin-left: 5%;
+            margin-top: 40px;
+            margin-bottom: 40px;
+            float: left;
+
+            @include viewports(stacked fluid) {
+                float: none;
+                width: 100%;
+                margin: 40px 0;
+                text-align: center;
             }
         }
     }
