--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-image: url(../images/map-image.png);
+    background-image: url('../images/map-image.png');
     background-repeat: no-repeat;
     background-position: center 70px;
     background-size: contain;
