--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -97,7 +97,7 @@ header {
                 height: 120px;
                 padding: 0;
                 margin: 0;
-                background-image: image-url('aikumo-logo.png');
+                background-image: url('../images/aikumo-logo.png');
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center center;
