--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -6,7 +6,11 @@ header {
     z-index: 1;
     position: relative;
     box-shadow: 0 0 0 transparent;
-    transition: box-shadow $headerAnimationSpeed ease-out;
+
+    -webkit-transition: box-shadow $headerAnimationSpeed ease-out;
+    -moz-transition:    box-shadow $headerAnimationSpeed ease-out;
+    -o-transition:      box-shadow $headerAnimationSpeed ease-out;
+    -ms-transition:     box-shadow $headerAnimationSpeed ease-out;
 
     .minified-header & {
         background: #f5f3f3;
@@ -30,11 +34,16 @@ header {
         a {
             display: block;
             padding: 70px 20px 70px 20px;
+            padding-top: 70px;
             text-decoration: none;
             text-align: center;
             color: #555;
             font-size: 18px;
-            transition: padding-top $headerAnimationSpeed ease-out;
+
+            -webkit-transition: padding-top $headerAnimationSpeed ease-out;
+            -moz-transition:    padding-top $headerAnimationSpeed ease-out;
+            -o-transition:      padding-top $headerAnimationSpeed ease-out;
+            -ms-transition:     padding-top $headerAnimationSpeed ease-out;
 
             &:last-child {
                 padding-right: 20px; // TODO: What about stacked..?
@@ -96,20 +105,33 @@ header {
                 @include viewports(above stacked) { // use an absolutely-positioned logo instead of the stacked one
                     // see http://pleeease.io/play/
                     -webkit-transform-origin: left center;
+                    -ms-transform-origin: left center;
                     transform-origin: left center;
-                    transition: -webkit-transform $headerAnimationSpeed ease-out;
-                    transition: transform $headerAnimationSpeed ease-out;
+                    //transition: -webkit-transform $headerAnimationSpeed ease-out;
+                    //transition: transform $headerAnimationSpeed ease-out;
+
+                    -webkit-transition: transform $headerAnimationSpeed ease-out;
+                    -moz-transition:    transform $headerAnimationSpeed ease-out;
+                    -o-transition:      transform $headerAnimationSpeed ease-out;
+                    -ms-transition:     transform $headerAnimationSpeed ease-out;
+
                     position: absolute;
                     top: 50%;
                     left: 30px;
                     width: 260px;
                     height: 120px;
+                    -webkit-transform: translateY(-50%);
+                    -ms-transform: translateY(-50%);
                     transform: translateY(-50%);
 
                     .minified-header & { // collapse the logo to its smaller size when scrolled down
+                        -webkit-transform: translateY(-50%) scale(0.4);
+                        -ms-transform: translateY(-50%) scale(0.4);
                         transform: translateY(-50%) scale(0.4);
                     }
                     @include viewports(fluid fluid-) { // ...or when in fluid layout mode
+                        -webkit-transform: translateY(-50%) scale(0.4);
+                        -ms-transform: translateY(-50%) scale(0.4);
                         transform: translateY(-50%) scale(0.4);
                     }
                 }
