--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -19,8 +19,7 @@ body > * {
     padding-bottom: 15%;
 
     h2 {
-        font-size: 6vw;
-        //font-weight: 100;
+        font-size: 78px;
 
         @include viewports(up-to fluid) {
             font-size: 40px;
