--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -22,7 +22,7 @@ footer {
        @include standard-centered-section();
     }
 
-    .contact-us {
+    .contact {
         padding: 90px 0 0 0;
         color: white;
         font-size: 60px;
