--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,5 +41,5 @@ $logoBlue: #369AB3;
 @import "sec-about";
 @import "sec-services";
 @import "sec-technology";
-@import "sec-contact";
+@import "sec-team";
 @import "footer";
