Update team-images after 3cdefbd4.

--- a/app/styles/_sec-team.scss
+++ b/app/styles/_sec-team.scss
@@ -36,6 +36,7 @@ section#team {
                 @extend %shadow;
                 background-repeat: no-repeat;
                 background-position: center center;
+                background-size: cover;
                 width: $dimension;
                 height: $dimension;
                 border-radius: $dimension;
