--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -31,7 +31,47 @@ header {
         text-align: right; // in "above stacked", the nav-items should pack to the right
         overflow: hidden;
 
-        a {
+        .language-selection {
+            border-left: 1px solid gray;
+            padding: 0 20px;
+
+            &.en {
+                a:first-child {
+                    color: lighten($logoBlue, 5%);
+                    font-weight: bold;
+                }
+            }
+
+            &.fi {
+                a:last-child {
+                    color: lighten($logoBlue, 5%);
+                    font-weight: bold;
+                }
+            }
+
+            @include viewports(fluid-) {
+                font-size: 14px;
+            }
+
+            @include viewports(up-to stacked) {
+                border-left: none;
+                text-align: right;
+                padding: 10px 10px 0 10px;
+                width:  50%;
+                float: right;
+                clear: both;
+                font-size: 13px;
+                display: block;
+            }
+
+            > a {
+                text-decoration: none;
+                color: #777;
+                margin: 0 2px;
+            }
+        }
+
+        > a {
             display: block;
             padding: 70px 20px 70px 20px;
             padding-top: 70px;
@@ -65,6 +105,11 @@ header {
                 line-height: 22px;
                 padding-top: 20px;
                 padding-bottom: 20px;
+            }
+
+            @include viewports(fluid-) {
+                width: 12%; // leave ~25% space for the logo
+                font-size: 14px;
             }
 
             @include viewports(up-to stacked) {
@@ -101,6 +146,11 @@ header {
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center center;
+
+                @media (max-width: 1100px) and (min-width: 1024px) {
+                    background-size: auto 80px;
+                    background-position: left center;
+                }
 
                 @include viewports(above stacked) { // use an absolutely-positioned logo instead of the stacked one
                     // see http://pleeease.io/play/
